--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="E:Github\IMG_20230318_204842_745.jpg" alt="" />
+            <img src="IMG_20230318_204842_745.jpg" alt="" />
           </div>
           <div class="right">
             <div class="topic">Designing Is My Passion</div>
